--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,28 @@
 {
+  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "description": "server side code goes here",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
+    "save": "^2.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "nodemon": "^2.0.7"
   }
 }
