--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-axios": "^2.0.5",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
