--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-sidebar": "^3.0.2",
-    "web-vitals": "^1.1.0"
+    "save": "^2.4.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
