--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7"
   }
 }
