--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "json-server": "^0.16.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-axios": "^2.0.5",
@@ -16,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
+    "react-query": "^3.13.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-sidebar": "^3.0.2",
@@ -27,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "myserver": "json-server --watch db.json --port 3009"
   },
   "eslintConfig": {
     "extends": [
