--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "json-server": "^0.16.3",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-axios": "^2.0.5",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
+    "react-moment": "^1.1.1",
     "react-query": "^3.13.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
