--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/Gink3/SmallChannelShootOut/issues"
   },
-  "homepage": "https://github.com/Gink3/SmallChannelShootOut#readme"
+  "homepage": "https://github.com/Gink3/SmallChannelShootOut#readme",
+  "devDependencies": {
+    "@eslint/eslintrc": "^1.2.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0"
+  }
 }
